--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -21,13 +21,17 @@
         <div class="dropdown simple">
           <a href="javascript:;" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             <span><%= @current_classroom.name %></span>
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-right">
-            <% @current_school.classrooms.each do |cr| %>
-              <li><%= link_to cr.name, dashboard_path(classroom:cr) %></li>
+            <% unless current_user.teacher? %>
+              <span class="caret"></span>
             <% end %>
-          </ul>
+          </a>
+          <% unless current_user.teacher? %>
+            <ul class="dropdown-menu dropdown-menu-right">
+              <% @current_school.classrooms.each do |cr| %>
+                <li><%= link_to cr.name, dashboard_path(classroom:cr) %></li>
+              <% end %>
+            </ul>
+          <% end %>
         </div>
       </div>
     </div>
