Replaced kids on students everywhere for classroom

--- a/app/views/kids/index.html.erb
+++ b/app/views/kids/index.html.erb
@@ -72,7 +72,7 @@
       </tr>
       </thead>
       <tbody>
-      <% @current_classroom.kids.each do |kid| %>
+      <% @current_classroom.students.each do |kid| %>
         <tr class="text-center v-middle">
           <td class="minimal">
             <%= link_to kid do %>
