--- a/app/views/users/activities.html.erb
+++ b/app/views/users/activities.html.erb
@@ -94,7 +94,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @current_classroom.kids.each do |kid| %>
+        <% @current_classroom.students.each do |kid| %>
           <tr class="text-center v-middle">
             <td class="text-center">
               <span class="text-main font-large"><%= kid.full_name %></span>
