--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -96,7 +96,7 @@
           </td>
         <% end %>
         <td>
-          <span class="text-main font-large"><%= @current_classroom.kids.count %></span>
+          <span class="text-main font-large"><%= @current_classroom.students.count %></span>
         </td>
 
         <td></td>
@@ -126,7 +126,7 @@
       </tr>
       </thead>
       <tbody>
-      <% @current_classroom.kids.each do |kid| %>
+      <% @current_classroom.students.each do |kid| %>
         <tr class="text-center v-middle">
           <td class="minimal">
             <%= link_to kid do %>
