#118 - add first name and last name fields; make some html tweaks

--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -139,7 +139,7 @@
     var location = parseInt(<%= @first_new_parent %>);
     $(document).on('click', 'a.add-template', function(){
       var el = $(this);
-      $('#parents .form-group.template-body').eq(location).removeClass('hidden');
+      $('#parents .template-body').eq(location).removeClass('hidden');
       location++;
     });
 
