--- a/app/views/kids/_parents.html.erb
+++ b/app/views/kids/_parents.html.erb
@@ -1,25 +1,45 @@
 <% @first_new_parent = @kid.family_relationships.index{|family_rel| family_rel.new_record? } %>
 <% @kid.family_relationships.each_with_index do |family_rel, index| %>
-  <div class="form-group template-body <%= family_rel.new_record? ? 'hidden' : '' %>" id="parent#<%= family_rel.parent.id %>">
+  <div class="template-body <%= family_rel.new_record? ? 'hidden' : '' %>" id="parent#<%= family_rel.parent.id %>">
     <%= f.fields_for :family_relationships, family_rel do |fr| %>
-        <label class="col-sm-4 control-label text-main">Parent Email:</label>
-        <div class="col-sm-8">
-          <%= fr.fields_for :parent do |parent| %>
-            <%= parent.hidden_field :role_id, value: Role.find_by(name: 'Parent').id %>
-            <%= parent.text_field :email, placeholder: 'email@example.com', class: 'form-control' %>
-          <% end %>
+      <%= fr.fields_for :parent do |parent| %>
+        <div class="kmSection">
+          <h3>Parent Information</h3>
+          <div class="form-group">
+            <label class="col-sm-4 control-label text-main">Email:</label>
+            <div class="col-sm-8">
+              <%= parent.hidden_field :role_id, value: Role.find_by(name: 'Parent').id %>
+              <%= parent.text_field :email, placeholder: 'email@example.com', class: 'form-control' %>
+            </div>
+            <div class="off-field off-right">
+              <div class="col-sm-12">
+                <% if fr.object.parent.new_record? %>
+                  <%= link_to 'javascript:;', class:'text-danger control-label remove-template' do %>
+                    Remove
+                  <% end %>
+                <% else %>
+                  <%= link_to 'Remove', users_admin_path(fr.object.parent), method: :delete, remote: true, class:'text-danger control-label remove-template' %>
+                <% end %>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-4 control-label text-main">First Name:</label>
+            <div class="col-sm-8">
+              <%= parent.text_field :first_name, placeholder: 'First Name', class: 'form-control' %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-4 control-label text-main">Last Name:</label>
+            <div class="col-sm-8">
+              <%= parent.text_field :last_name, placeholder: 'Last Name', class: 'form-control' %>
+            </div>
+          </div>
+
         </div>
-      <div class="off-field off-right">
-      <div class="col-sm-12">
-        <% if fr.object.parent.new_record? %>
-          <%= link_to 'javascript:;', class:'text-danger control-label remove-template' do %>
-            Remove
-          <% end %>
-        <% else %>
-          <%= link_to 'Remove', users_admin_path(fr.object.parent), method: :delete, remote: true, class:'text-danger control-label remove-template' %>
-        <% end %>
-      </div>
-    </div>
+      <% end %>
     <% end %>
   </div>
 <% end %>
