#114 :: Update screen and feature of Activities.

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -151,3 +151,5 @@ label.accessToken{margin-left: -12px}
   margin-top: -20px;
 }
 .resetForm .control-label{text-align:right !important;}
+
+.dropdown.simple.bulkTime a{ border-radius: 100px; height: 30px;}
