--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -5,19 +5,11 @@
     <%= f.hidden_field :bubble_group_id, value: bg.id %>
     <%= f.hidden_field :classroom_id, value: @current_classroom.id %>
       <div class="btn-multi center-block">
-        <%= link_to 'javascript:', class: 'warning action action-right' do %>
-          <div class="action-media">
-            <i class="fa fa-play"></i>
-          </div>
-          <div class="action-body">
-            <div></div>
-          </div>
-        <% end %>
       <div class="extra-action">
         <div class="extra-container">
-          <div class="dropdown simple select">
+          <div class="dropdown simple select bulkTime">
             <a href="javascript:" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              <span class="value">No Time</span>
+              <span class="value"><%= @time_options.first[0] %></span>
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu dropdown-menu-right">
