--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -40,7 +40,7 @@
       <%= link_to 'Show Games', games_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
       <%= link_to 'Reports', reports_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
       <%= link_to 'Edit', edit_kid_path(@kid), class: 'btn btn-warning btn-simple btn-wide' %>
-      <%= link_to 'Back', kids_path, class: 'btn btn-warning btn-simple btn-wide' %>
+      <%= link_to 'Back', dashboard_classroom_path(classroom: @kid.classroom), class: 'btn btn-warning btn-simple btn-wide' %>
     </div>
   </div>
 </div>
