#123 :: changed link of back button on school edit page

--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="row text-center actions">
-      <%= link_to 'Back', classrooms_path, class: 'btn btn-danger btn-large btn-wide btn-simple' %>
+      <%= link_to 'Back', schools_path, class: 'btn btn-danger btn-large btn-wide btn-simple' %>
       <% if @school.new_record? %>
         <%= f.submit 'Create School', class: 'btn btn-info btn-large btn-wide btn-simple' %>
       <% else %>
