--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -35,9 +35,11 @@
 <div class="container kmSection">
   <div class="row actions multi-row text-center">
     <div class="col-md-12">
-      <%= link_to 'Play', play_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
-      <%= link_to 'Play Games', play_game_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
-      <%= link_to 'Show Games', games_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
+      <% if current_user.admin? %>
+        <%= link_to 'Play', play_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
+        <%= link_to 'Play Games', play_game_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
+        <%= link_to 'Show Games', games_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
+      <% end %>
       <%= link_to 'Reports', reports_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
       <%= link_to 'Edit', edit_kid_path(@kid), class: 'btn btn-warning btn-simple btn-wide' %>
       <%= link_to 'Back', dashboard_classroom_path(classroom: @kid.classroom), class: 'btn btn-warning btn-simple btn-wide' %>
