--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -37,7 +37,7 @@
             <div class="dropdown select">
               <% teachers = User.teachers %>
               <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                <span class="value"><%= @classroom.teacher ? @classroom.teacher.full_name : teachers.first.full_name %></span>
+                <span class="value"><%= @classroom.teachers.any? ? @classroom.teachers.first.full_name : teachers.first.full_name %></span>
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu dropdown-menu-right">
@@ -45,7 +45,7 @@
                   <li><a href="javascript:" data-id="<%= teacher.id %>"><%= teacher.full_name %></a></li>
                 <% end %>
               </ul>
-              <%= f.hidden_field :user_id, value: @classroom.teacher ? @classroom.teacher.id : teachers.first.id %>
+              <%= f.hidden_field :user_id, value: @classroom.teachers.any? ? @classroom.teachers.first.id : teachers.first.id %>
             </div>
           </div>
         </div>
