--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -71,7 +71,7 @@
             </td>
             <td class="">
               <span class="text-main font-large">
-                <%= classroom.teacher.try(:full_name) %>
+                <%= classroom.teachers.first.try(:full_name) %>
               </span>
             </td>
             <td>
